welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: type mismatch;
 found   : Int
 required: Boolean
if ((a >= 10 || a <=10 ) || (b >= 10 || a b=10 )) return true
                                        ^